egonlang-core/res/examples/invalid/type_alias_invalid_identifier_lowercase.eg
type int = number;

// out: SyntaxError: type aliases are required to be PascalCase: `int`
